<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/console"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </HorizontalScrollView>

    </ScrollView>


    <LinearLayout
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pkg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/package_name"
            android:hint="@string/package_name"
            android:inputType="text" />
        <Button
            android:id="@+id/selectapp"
            android:text="@string/select_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/libName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/package_name"
            android:hint="@string/libname_leave_blank_if_wanna_use_default"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/metadata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/dump_metadata" />

        <CheckBox
            android:id="@+id/autoFix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/fix_elf_dump" />
    </LinearLayout>

    <LinearLayout
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/beginDump"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dump" />

    </LinearLayout>

    <LinearLayout
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/selecttodump"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_to_dump" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_github_repository" />
    </LinearLayout>
</LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
